...
        searchTableView.delegate = self
        searchTableView.dataSource = self
        
        search = UISearchController(searchResultsController: nil)
        search?.searchResultsUpdater = self
        search?.obscuresBackgroundDuringPresentation = false
        search?.searchBar.placeholder = "Type a movie here to search"
        navigationItem.searchController = search
        
        title = "Movies"
    }
}


extension SearchViewController: PresenterToViewSearchProtocol {
    
...
