...
    }
    
    lazy var addToWatchlistButton: UIButton = {
        let button = UIButton()
        button.configuration = .filled()
        button.contentMode = .scaleToFill
        button.setTitle("Add to Watchlist", for: .normal)
        button.titleLabel?.font = UIFont(name: "AvenirNext-Bold", size: 14)
        button.layer.cornerRadius = 12
        button.layer.shadowColor = #colorLiteral(red: 0, green: 0, blue: 0, alpha: 1)
        button.layer.shadowOffset = CGSize(width: 1, height: 1)
        button.layer.shadowRadius = 2.1
        button.layer.shadowOpacity = 0.6
...
